# mediakeeper_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_media_normalized_title_unique.py  0003_text_support_and_single_admin_review.py
docs/: telegram_inline_media_bot_plan.md
src/multimedia_bot/: __init__.py  __main__.py  config.py
src/multimedia_bot/application/: admin_catalog.py  admin_ingestion.py  chosen_result.py  file_storage.py  ingestion.py  inline_service.py  manifest.py  orphan_cleanup.py  query_parser.py  result_mapper.py  search.py  telegram_limits.py  telegram_media.py  text.py  user_submission.py  validation.py
src/multimedia_bot/bot/: app.py  dependencies.py  handlers.py  keyboards.py  states.py
src/multimedia_bot/cli/: __init__.py  import_media.py
src/multimedia_bot/domain/: models.py  repositories.py
src/multimedia_bot/infrastructure/: db.py  file_metadata.py  models.py  repositories.py  telegram_uploader.py
tests/: conftest.py  test_admin_catalog.py  test_admin_ingestion.py  test_app_bootstrap.py  test_file_storage.py  test_handlers.py  test_ingestion.py  test_inline_service.py  test_keyboards.py  test_migrations.py  test_orphan_cleanup.py  test_query_parser.py  test_repository_and_search.py  test_result_mapper.py  test_user_submission.py
